Fix height jumping on animation

--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -2,7 +2,6 @@
 	margin: 0 auto;
 	transform: scale(1);
 	transition: transform .4s, height .4s;
-	height: inherit !important;
 }
 
 .hide .grid {
